# wa_llm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.base.yml  docker-compose.local-run.yml  docker-compose.yml  main.py  pyproject.toml  run_local_lints.sh
.cursor/rules/: fast-api.mdc
.github/workflows/: test.yml
app/: check_status.py  daily_summary.py  deps.py  family_scheduler.py  ingest.py  main.py
migrations/: env.py
migrations/versions/: 05d84f746fc7_adding_community_keys.py  1739903820_05d84f746fc7_first_version.py  1749998222_5a9be1edde3d_add_alert_on_spam_to_group_table.py  1750403493_bbba88e22126_group_forward_url.py  add_family_functionality.py  f26c6bacce0b_add_last_ingest_summarysync.py
notebooks/: .gitignore  import_wa_group_history.ipynb
src/: claude_wrapper.py  config.py  db.py  main.py  message_router.py  wa_whatsapp_web_wrapper.py  webhook_logic.py  webhook_logic_pydantic.py
src/api/: deps.py  status.py  webhook.py
src/config/: __init__.py
src/daily_ingest/: __init__.py  daily_ingest.py
src/daily_summary_sync/: __init__.py
src/handler/: __init__.py  base_handler.py  family_handler.py  family_integration.py  knowledge_base_answers.py  router.py  test_router.py  upsert.py  whatsapp_group_link_spam.py
src/models/: __init__.py  family.py  family_group.py  family_imports.py  group.py  jid.py  knowledge_base_topic.py  message.py  sender.py  test_jid.py  test_message.py  upsert.py  webhook.py
src/scheduler/: family_scheduler.py
src/test_utils/: mock_session.py
src/utils/: chat_text.py  importing_wa.py  voyage_embed_text.py
src/whatsapp/: __init__.py  client.py  init_groups.py  models.py  test_jid.py
src/whatsapp_gw/: __init__.py
tests/: conftest.py
tests/test_handler/: mock_session.py  test_router.py
tests/test_models/: test_jid.py  test_message.py
