[project]
name = "wa-llm"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "httpx>=0.28.1",
    "pydantic-ai[logfire]>=0.2.14",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.37",
    "pgvector>=0.3.6",
    "voyageai>=0.3.2",
    "tenacity>=9.0.0",
    "alembic>=1.14.1",
    "logfire[fastapi,httpx,sqlalchemy,system-metrics]>=3.12.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "nbstripout>=0.8.1",
    "whatstk>=0.7.1",
    "ruff>=0.8.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.401",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pragma: no cover",
    "import *",
    # 1. Exclude an except clause of a specific form:
    "except ValueError:\\n\\s*assume\\(False\\)",
    # 2. Comments to turn coverage on and off:
    "no cover: start(?s:.)*?no cover: stop",
    # 3. A pragma comment that excludes an entire file:
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
    "@pytest\\.fixture.*",
    "@pytest\\.mark.*",
]

omit = [
    "tests/*",
    "/tmp/*",
    "/private/*",
    "*/temporary/*"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
